--- a/src/components/LoginMail/LoginMail.css
+++ b/src/components/LoginMail/LoginMail.css
@@ -19,9 +19,27 @@
 .floating-label.active {
   top: 10%;
   font-size: 12px;
-  color: #002395;
+  color: light-dark(var(--color-primary-light), var(--color-primary-dark));
   max-width: max-content;
   max-height: max-content;
   padding: 0;
   margin: 0;
+}
+
+.login-mail-form {
+  width: 40%;
+}
+
+.login-mail-submit {
+  width: 100%;
+}
+
+.ant-form-item-explain-error {
+  color: light-dark(black, var(--color-blank-gray)) !important;
+  font-weight: bold;
+}
+.ant-input-status-error:not(.ant-input-disabled) {
+  border-width: 2px !important;
+  border-color: light-dark(black, var(--color-blank-gray)) !important;
+  box-shadow: 0 0 5px light-dark(black, var(--color-blank-gray)) !important;
 }
