--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,11 @@
 :root {
-  --color-primary-light: #4b0082;
-  --color-secondary-light: #f2bd27;
+  --color-primary-light: #ff801f;
+  --color-secondary-light: #191970;
   --color-bg-light: #ffffff;
   --color-text-light: #1c1b1b;
-  --color-primary-dark: #4b0082;
-  --color-secondary-dark: #f2bd27;
+  --color-primary-dark: #ff801f;
+  --color-secondary-dark: #191970;
   --color-bg-dark: #1c1b1b;
   --color-text-dark: #ffffff;
+  --color-blank-gray: rgb(140, 130, 115);
 }
