--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,11 +1,23 @@
 .login-container {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  align-items: center;
 }
 
 .right-container {
   background-color: #f5f5f5;
-  height: 100%;
+  max-height: 100vh;
+}
+
+.left-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  text-align: center;
+}
+
+.join {
+  border-radius: 16px;
+  border: none;
 }
