--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -3,15 +3,27 @@
   width: 100vw;
 }
 
+.right-container {
+  background-color: #f5f5f5;
+  max-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .left-container {
-  height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 1rem;
   text-align: center;
+}
+
+.join {
+  border-radius: 16px;
+  border: none;
 }
 
 .card-container {
